--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-matplotlib==3.9.2
-numpy==2.1.1
-pandas==2.2.2
-scipy==1.14.1
-seaborn==0.13.2
+matplotlib==3.3.4
+numpy==1.19.5
+pandas==1.1.5
+scipy==1.5.4
+seaborn==0.11.2
+tqdm==4.64.1
 unidip==0.1.1
